--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -7,6 +7,10 @@
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	   <link rel="stylesheet" type="text/css" href="css/responsivo.css">
         <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
+        <![if IE]> <link href="css/ieallversion.css" rel="stylesheet" type="text/css"> <![endif]–>
+
+       
+  
 	</head>
 	<body>
         <div class="Top">
