--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	   <link rel="stylesheet" type="text/css" href="css/responsivo.css">
         <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
-        <![if IE]> <link href="css/ieallversion.css" rel="stylesheet" type="text/css"> <![endif]–>
+        <![if gte IE 7]> <link href="css/ieallversion.css" rel="stylesheet" type="text/css"> <![endif]–>
 
        
   
