add validator text

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -8,8 +8,8 @@
 	   <link rel="stylesheet" type="text/css" href="css/responsivo.css">
         <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
         <![if gte IE 7]> <link href="css/ieallversion.css" rel="stylesheet" type="text/css"> <![endif]–>
-
-       
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+       	<script type="text/javascript" src="js/validator.js"></script>
   
 	</head>
 	<body>
@@ -18,7 +18,7 @@
 				<div class="Logo"><a href="http://www.uanl.mx/"><img src="../imagenes/LogoUni2.png"></a> </div> 
 				<div class="Arriba">
 					<div class="Buscador">
-						
+						<input type="text">
 					</div>
 					<div class="BtnBuscar"><img src="../imagenes/BtnBuscar.png"></div>
 					<div class="BtnHome"><a href="#home"><img src="../imagenes/BtnHome2.png"></a></div>
@@ -61,7 +61,7 @@
 					<h3>Revisa periódicamente tu nivel de glucosa  </h3>
 				</div>
 				<div class="PreNoticia1">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. </p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. </p>
 				</div>
 				<div class="VerMas not1"><a>Ver más</a></div>
 
