add  adentroHTML and CSS

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -63,7 +63,7 @@
 				<div class="PreNoticia1">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. </p>
 				</div>
-				<div class="VerMas not1"><a>Ver más</a></div>
+				<div class="VerMas not1"><a href="sitio">Ver más</a></div>
 
 			</div>
 		</div>
@@ -77,7 +77,7 @@
 					<div class="Noticia2desc">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor 							nisi a dui posuere, rutrum volutpat velit efficitur.</p>
 					</div>
-					<div class= "vermas notGenerica"><a>Ver más</a></div>
+					<div class= "vermas notGenerica"><a href="sitio">Ver más</a></div>
 				</div>
 				<div class="Noticia3">
 					<div class="Noticia2Ima"><img src="../imagenes/prueba.PNG"></div>
@@ -87,7 +87,7 @@
 					<div class="Noticia2desc">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor 							nisi a dui posuere, rutrum volutpat velit efficitur.</p>
 					</div>
-					<div class= "vermas notGenerica"><a>Ver más</a></div>
+					<div class= "vermas notGenerica"><a href="sitio">Ver más</a></div>
 				</div>
 				<div class="Noticia4">
 					<div class="Noticia2Ima"><img src="../imagenes/prueba.PNG"></div>
@@ -97,7 +97,7 @@
 					<div class="Noticia2desc">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor 							nisi a dui posuere, rutrum volutpat velit efficitur.</p>
 					</div>
-					<div class= "vermas notGenerica"><a>Ver más</a></div>
+					<div class= "vermas notGenerica"><a href="sitio">Ver más</a></div>
 				</div>
 				<div class="Noticia5">
 					<div class="Noticia2Ima"><img src="../imagenes/prueba.PNG"></div>
@@ -107,7 +107,7 @@
 					<div class="Noticia2desc">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor 							nisi a dui posuere, rutrum volutpat velit efficitur.</p>
 					</div>
-					<div class= "vermas notGenerica"><a>Ver más</a></div>
+					<div class= "vermas notGenerica"><a href="sitio">Ver más</a></div>
 				</div>
 			</div>
 			<hr aling="center">
@@ -118,7 +118,7 @@
 						<div class="DescSabiasQue">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur. Aliquam erat volutpat. Praesent blandit nulla luctus, scelerisque elit in, porttitor ipsum. Donec efficitur laoreet nibh, ac lacinia nibh accumsan non</p>
 						</div>
-						<div class= "vermas vmSabiasQue"><a>Ver más</a></div>
+						<div class= "vermas vmSabiasQue"><a href="sitio">Ver más</a></div>
 					</div>
 					<div class="AbajoSabiasQue">
 						<div class="MiniImagenesSabiasQue"><img src="../imagenes/prueba.PNG"></div>
