--- a/Proyecto/dentro.html
+++ b/Proyecto/dentro.html
@@ -95,7 +95,25 @@
 					</p>
 				</div>
 				<div class="infoSabiasQue">
-					Yo soy raton 
+					<img src="../imagenes/prueba.PNG">
+					<h3>
+						¿Sabías que contamos con el servicio de tamizaje neonatal?
+					</h3>
+					<div class= "vermas vm">
+						<a href="sitio">Ver más</a>
+					</div>
+					<hr style="margin-bottom:10px; width:100%; ">
+					<div class="mnSQ">
+						<img src="../imagenes/prueba.PNG">
+					</div>
+					<div class="mnSQ">
+						<img src="../imagenes/prueba.PNG">
+					</div>
+					<div class="mnSQ">
+						<img src="../imagenes/prueba.PNG">
+					</div>
+					
+
 				</div>
 				 <!--<div style="clear: both"></div>-->
 			</div>	
