--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -25,24 +25,24 @@
 				</div>
 				<div class="Abajo">
 					<ul>
-							<li>Acerca de  DSM</li>
-							<li>Servicios</li>
-							<li>Programas</li>
-							<li>DerechoHabientes</li>
-							<li>Avisos</li>
-							<li>¿Sabías qué?</li>
-							<li>Promoción de la salud</li>
+							<li><a href="dentro.html">Acerca de  DSM</a></li>
+							<li><a href="dentro.html">Servicios</a></li>
+							<li><a href="dentro.html">Programas</a></li>
+							<li><a href="dentro.html">DerechoHabientes</a></li>
+							<li><a href="dentro.html">Avisos</a></li>
+							<li><a href="dentro.html">¿Sabías qué?</a></li>
+							<li><a href="dentro.html">Promoción de la salud</a></li>
 					</ul>
                     <input type="checkbox" id="menu-bar">
                     <label class="icon-menu" for="menu-bar"></label>
                     <nav class="munu-responsivo">
-                            <a>Acerca de  DSM</a>
-                            <a>Servicios</a>
-                            <a>Programas</a>
-                            <a>DerechoHabientes</a>
-                            <a>Avisos</a>
-                            <a>¿Sabías qué?</a>
-                            <a>Promoción de la salud </a>
+                            <a href="dentro.html">Acerca de  DSM</a>
+                            <a href="dentro.html">Servicios</a>
+                            <a href="dentro.html">Programas</a>
+                            <a href="dentro.html">DerechoHabientes</a>
+                            <a href="dentro.html">Avisos</a>
+                            <a href="dentro.html">¿Sabías qué?</a>
+                            <a href="dentro.html">Promoción de la salud </a>
                     </nav>
 				</div>
                     
