--- a/Proyecto/dentro.html
+++ b/Proyecto/dentro.html
@@ -115,7 +115,7 @@
 					
 
 				</div>
-				 <!--<div style="clear: both"></div>-->
+				 <div style="clear: both"></div>
 			</div>	
 		</div>
 		<div class="ColorGrisAb">
