fixed .colorBlan yeii

--- a/Proyecto/dentro.html
+++ b/Proyecto/dentro.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link rel="stylesheet" type="text/css" href="css/DentroEstilo.css">
-	   <link rel="stylesheet" type="text/css" href="css/responsivo.css">
+	   <link rel="stylesheet" type="text/css" href="css/responsivoDentro.css">
         <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
         <![if gte IE 7]> <link href="css/ieallversion.css" rel="stylesheet" type="text/css"> <![endif]–>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
