add responsive dentro html

--- a/Proyecto/dentro.html
+++ b/Proyecto/dentro.html
@@ -93,6 +93,40 @@
 					8.Producto/servicio a obtener para el derechohabiente. <br>
 					Incorporación del trabajador y sus beneficiaros al servicio médico y las prestaciones que deberian así como la emisión de una credencial del servicio.	
 					</p>
+					<!--  -->
+					1.Nombre del Servicio. <br>
+					Afiliación	
+					</p>
+					<p>
+					2.Descripción del Servicio. <br>
+					Afiliación es el departamento donde el trabajador realiza los trámites de: Alta y actualizacion de vigencia.	
+					</p>
+					<p>
+					3.Nombre del área, departamento o unidad que ofrece el servicio <br>
+					Afiliación	
+					</p>
+					<p>
+					4.Responsable del Servicio. <br>
+					Teresa de Jesús Escalante Tristán	
+					</p>
+					<p>
+					5.Datos de contacto <br>
+					Teléfono:83 48 69 02 y Extensión 182 <br>
+					Correo electronico: yillejo61@live.com.mx		
+					</p>
+					<p>
+					6.Horario de atención <br>
+					Lunes a viernes de 7:30 a 18:00 <br>
+					Horario para toma de fotografías: 8:00 a 14:30 y de 15:00 a 17:30	
+					</p>
+					<p>
+					7.Derechohabiente del servicio <br>
+					Todo trabajador(a) activo, con planta <br>Maestros con 15 horas mínimas semanal contratado; jubilados	
+					</p>
+					<p>
+					8.Producto/servicio a obtener para el derechohabiente. <br>
+					Incorporación del trabajador y sus beneficiaros al servicio médico y las prestaciones que deberian así como la emisión de una credencial del servicio.	
+					</p>
 				</div>
 				<div class="infoSabiasQue">
 					<img src="../imagenes/prueba.PNG">
