make again everything

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -4,11 +4,12 @@
 	</title>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
-	   <link rel="stylesheet" type="text/css" href="css/responsivo.css">
+	   <!-- <link rel="stylesheet" type="text/css" href="css/responsivo.css"> -->
         <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
-        <![if gte IE 7]> <link href="css/ieallversion.css" rel="stylesheet" type="text/css"> <![endif]–>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <!-- <![if gte IE 7]> <link href="css/ieallversion.css" rel="stylesheet" type="text/css"> <![endif]–> -->
+        <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
        	<script type="text/javascript" src="js/validator.js"></script>
   
 	</head>
@@ -33,7 +34,7 @@
 							<li><a href="dentro.html">¿Sabías qué?</a></li>
 							<li><a href="dentro.html">Promoción de la salud</a></li>
 					</ul>
-                    <input type="checkbox" id="menu-bar">
+                    <!-- <input type="checkbox" id="menu-bar">
                     <label class="icon-menu" for="menu-bar"></label>
                     <nav class="munu-responsivo">
                             <a href="dentro.html">Acerca de  DSM</a>
@@ -43,12 +44,12 @@
                             <a href="dentro.html">Avisos</a>
                             <a href="dentro.html">¿Sabías qué?</a>
                             <a href="dentro.html">Promoción de la salud </a>
-                    </nav>
+                    </nav> -->
 				</div>
                     
 			</div>
 		</div>
-        <div id="home" style="display:hidden;"></div>
+        <!-- <div id="home" style="display:hidden;"></div>
 		<div class="ColorAma">
 			<div class=" Centro Banner">Slider</div>
 		</div>
@@ -259,6 +260,6 @@
 			</div>
 			<hr>
 			<p class="Uanl">Universidad Autónoma de Nuevo León &reg; Pedro de alba S/n, San Nicolás de Los Garza, Nuevo León</p>
-		</div>     
+		</div>      -->
 	</body>
 </html>
