--- a/Proyecto/dentro.html
+++ b/Proyecto/dentro.html
@@ -4,6 +4,7 @@
 	</title>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/DentroEstilo.css">
 	   <link rel="stylesheet" type="text/css" href="css/responsivoDentro.css">
         <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
