still optimizing header

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -11,7 +11,7 @@
 	<body>
 	<header class="head">
 			<div class="conteiner">	
-				<a href="http://www.uanl.mx/"><img src="../imagenes/LogoUni2.png"></a>  
+				<a href="http://www.uanl.mx/"><img id="logoUni" src="../imagenes/LogoUni2.png" alt="Uanl Logo"></a>  
 				
 					<div class="Buscador">
 						<input type="text">
