menu and header is done

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -12,23 +12,20 @@
 	<header class="head">
 			<div class="conteiner">	
 				<a href="http://www.uanl.mx/"><img id="logoUni" src="../imagenes/LogoUni2.png" alt="Uanl Logo"></a>  
-				
-					<div class="Buscador">
-						<input type="text">
-					</div>
-					<div class="BtnBuscar"><img src="../imagenes/BtnBuscar.png"></div>
-					<div class="BtnHome"><a href="#home"><img src="../imagenes/BtnHome2.png"></a></div>
-			
-				
+				<input id ="Buscador" type="text">
+				<a><img src="../imagenes/BtnBuscar.png" alt=" Btn buscar" id="BtnBuscar"></a>
+				<a href="#home"><img src="../imagenes/BtnHome2.png" alt=" Imagen home" id="BtnHome"></a>
+				<menu type="toolbar" id="menu">
 					<ul>
-							<li><a href="dentro.html">Acerca de  DSM</a></li>
-							<li><a href="dentro.html">Servicios</a></li>
-							<li><a href="dentro.html">Programas</a></li>
-							<li><a href="dentro.html">DerechoHabientes</a></li>
-							<li><a href="dentro.html">Avisos</a></li>
-							<li><a href="dentro.html">¿Sabías qué?</a></li>
-							<li><a href="dentro.html">Promoción de la salud</a></li>
+						<li><a href="dentro.html">Acerca de  DSM</a></li>
+						<li><a href="dentro.html">Servicios</a></li>
+						<li><a href="dentro.html">Programas</a></li>
+						<li><a href="dentro.html">DerechoHabientes</a></li>
+						<li><a href="dentro.html">Avisos</a></li>
+						<li><a href="dentro.html">¿Sabías qué?</a></li>
+						<li><a href="dentro.html">Promoción de la salud</a></li>
 					</ul>
+				</menu>	 
             </div>        
 	</header>			
 			
