banner it's done

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -7,6 +7,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
+		<link rel="stylesheet" type="text/css" href="css/responsivo.css">
 	</head>
 	<body>
 	<header class="head">
@@ -28,27 +29,27 @@
 				</menu>	 
             </div>        
 	</header>			
-			
-		
-        <!-- <div id="home" style="display:hidden;"></div>
-		<div class="ColorAma">
-			<div class=" Centro Banner">Slider</div>
-		</div>
-		<div class="ColorGris">
-			<div class="Noticia1">
-				<div class="ImagenNoticia1">
-					<img src="../imagenes/not1.jpg">
-				</div>
-				<div class="TituloNoticia1">
-					<h3>Revisa periódicamente tu nivel de glucosa  </h3>	
-				</div>
-				<div class="PreNoticia1">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. </p>
-				</div>
-				<div class="VerMas not1"><a href="dentro.html">Ver más</a></div>
-
+	<div id="firstYellow">
+			<div class="Banner conteiner ">Slider</div>
+	</div>	
+	<div id="firstGray">
+		<!-- <div class="Noticia1">
+			<div class="ImagenNoticia1">
+				<img src="../imagenes/not1.jpg">
 			</div>
-		</div>
+			<div class="TituloNoticia1">
+				<h3>Revisa periódicamente tu nivel de glucosa  </h3>	
+			</div>
+			<div class="PreNoticia1">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. </p>
+			</div>
+			<div class="VerMas not1"><a href="dentro.html">Ver más</a></div>
+
+		</div> -->
+	</div>
+
+
+	<!-- 
 		<div class="ColorBlan">
 			<div class="ArribaBlanco Centro">
 				<div class="Noticia2">
