gray div is done

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -33,13 +33,15 @@
 			<div class="Banner conteiner ">Slider</div>
 	</div>	
 	<div id="firstGray">
+		<div class="conteiner">
+			<img  id="firstGray_img" height="206" width="415" src="../imagenes/not1.jpg" alt="primera imagen">
+			<p class="firstGray_title">Revisa periódicamente tu nivel de glucosa</p>
+			<p id="firstGray_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet dui. Donec nec nulla eu magna euismod ornare condimentum non lorem. Vivamus quis eros lacus. Aliquam rhoncus odio non erat rhoncus, et posuere nibh gravida.</p>
+		</div>
+		
 		<!-- <div class="Noticia1">
-			<div class="ImagenNoticia1">
-				<img src="../imagenes/not1.jpg">
-			</div>
-			<div class="TituloNoticia1">
-				<h3>Revisa periódicamente tu nivel de glucosa  </h3>	
-			</div>
+			
+		
 			<div class="PreNoticia1">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. </p>
 			</div>
