have a bug check

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -37,10 +37,40 @@
 			<img  id="firstGray_img" height="206" width="415" src="../imagenes/not1.jpg" alt="primera imagen">
 			<p class="firstGray_title">Revisa periódicamente tu nivel de glucosa</p>
 			<p id="firstGray_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet dui. Donec nec nulla eu magna euismod ornare condimentum non lorem. Vivamus quis eros lacus. Aliquam rhoncus odio non erat rhoncus, et posuere nibh gravida.</p>
-			<div class="verMas firstGrayVM"><a href="dentro.html"  id="firstGray_vermas">Ver más</a></div>
+			<!-- <div class="verMas"><a href="dentro.html"  id="firstGray_vermas">Ver más</a></div> -->
 		</div>
 	</div>
-
+	<div id="firstWhite">
+		<div class="conteiner">
+			<div class="firstWhite_news">
+				<img class="firstWhite_img" alt="imagen noticia" src="../imagenes/prueba.PNG">
+				<p class="firstWhite_title">Lorem ipsum sit</p>
+				<p class="firstWhite_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque purus, finibus non egestas non, elementum eu leo. Pellentesque in porttitor turpis.</p>
+				<div class="firstWhite_vm"><a href="dentro.html" >Ver más</a></div>
+			</div>
+			
+			<div class="firstWhite_news izq">
+				<img class="firstWhite_img" alt="imagen noticia" src="../imagenes/prueba.PNG">
+				<p class="firstWhite_title">Lorem ipsum sit</p>
+				<p class="firstWhite_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque purus, finibus non egestas non, elementum eu leo. Pellentesque in porttitor turpis.</p>
+				<div class="firstWhite_vm"><a href="dentro.html" >Ver más</a></div>
+			</div>
+			
+			<div class="firstWhite_news izq">
+				<img class="firstWhite_img" alt="imagen noticia" src="../imagenes/prueba.PNG">
+				<p class="firstWhite_title">Lorem ipsum sit</p>
+				<p class="firstWhite_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque purus, finibus non egestas non, elementum eu leo. Pellentesque in porttitor turpis.</p>
+				<div class="firstWhite_vm"><a href="dentro.html" >Ver más</a></div>
+			</div>
+			 
+			<div class="firstWhite_news izq">
+				<img class="firstWhite_img" alt="imagen noticia" src="../imagenes/prueba.PNG">
+				<p class="firstWhite_title">Lorem ipsum sit</p>
+				<p class="firstWhite_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque purus, finibus non egestas non, elementum eu leo. Pellentesque in porttitor turpis.</p>
+				<div class="firstWhite_vm"><a href="dentro.html" >Ver más</a></div>
+			</div>
+		</div>
+	</div>
 
 	<!-- 
 		<div class="ColorBlan">
