add  firstwhite block and half of second grey

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -32,12 +32,12 @@
 	<div id="firstYellow">
 			<div class="Banner conteiner ">Slider</div>
 	</div>	
-	<div id="firstGray">
+	<div id="firstGrey">
 		<div class="conteiner">
-			<img  id="firstGray_img" height="206" width="415" src="../imagenes/not1.jpg" alt="primera imagen">
-			<p class="firstGray_title">Revisa periódicamente tu nivel de glucosa</p>
-			<p id="firstGray_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet dui. Donec nec nulla eu magna euismod ornare condimentum non lorem. Vivamus quis eros lacus. Aliquam rhoncus odio non erat rhoncus, et posuere nibh gravida.</p>
-			<!-- <div class="verMas"><a href="dentro.html"  id="firstGray_vermas">Ver más</a></div> -->
+			<img  id="firstGrey_img" height="206" width="415" src="../imagenes/not1.jpg" alt="primera imagen">
+			<p class="firstGrey_title">Revisa periódicamente tu nivel de glucosa</p>
+			<p id="firstGrey_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet dui. Donec nec nulla eu magna euismod ornare condimentum non lorem. Vivamus quis eros lacus. Aliquam rhoncus odio non erat rhoncus, et posuere nibh gravida.</p>
+			<div class="verMas"><a href="dentro.html"  id="firstGrey_vermas">Ver más</a></div>
 		</div>
 	</div>
 	<div id="firstWhite">
@@ -69,74 +69,40 @@
 				<p class="firstWhite_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque purus, finibus non egestas non, elementum eu leo. Pellentesque in porttitor turpis.</p>
 				<div class="firstWhite_vm"><a href="dentro.html" >Ver más</a></div>
 			</div>
+			<!-- end first part -->
+			<hr class="hrs">
+			<img id="firstWhite_imgSabiasQue" src="../imagenes/prueba.PNG" alt="sabías qué" width="328" height="203" >
+			<p id="firstWhite_titleSabiasQue">¿Sabías que contamos con el servicio de tamizaje neonatal?</p>
+			<p id="firstWhite_descriptionSabiasQue">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet dui. Donec nec nulla eu magna euismod ornare condimentum non lorem. Vivamus quis eros lacus. Aliquam rhoncus odio non erat rhoncus, et posuere nibh gravida Vivamus quis eros lacus. Aliquam rhoncus penlet.
+			</p>
+			<div class="firstWhite_verMasSabiasQue"><a href="dentro.html">Ver más</a></div>
+			<img src="../imagenes/prueba.PNG" height="109" width="328" class="SabiasQue_minImage" alt="SabiasQue_minImage">
+			<img src="../imagenes/prueba.PNG" height="109" width="328" class="SabiasQue_minImage minIzq" alt="SabiasQue_minImage">
+			<img src="../imagenes/prueba.PNG" height="109" width="328" class="SabiasQue_minImage minIzq" alt="SabiasQue_minImage">
+		</div>
+	</div>
+	<div id="secondGrey">
+		<div class="conteiner">
+			<div id="ServiciosQueOfrece">
+				<img id="secondGrey_imgServiciosQueOfrece" src="../imagenes/pildora.png" alt="imagen pildora">
+				<label for="secondGrey_imgServiciosQueOfrece" class="Titulos">Servicios que se ofrecen</label>
+				<hr class="hrs hrsSecondGrey">
+			</div>
+			<div id="ContactosFrecuentes">
+				<img id="secondGrey_imgSContactosFrecuente" src="../imagenes/signos.png" alt="imagen signos">
+				<label for="secondGrey_imgSContactosFrecuente" class="Titulos">Contactos Frecuentes</label>
+				<hr class="hrs hrsSecondGrey">
+			</div>
 		</div>
 	</div>
 
 	<!-- 
-		<div class="ColorBlan">
-			<div class="ArribaBlanco Centro">
-				<div class="Noticia2">
-					<div class="Noticia2Ima"><img src="../imagenes/prueba.PNG"></div>
-					<div class="Noticia2Titulo">
-						<p>Lorem ipsum dolor sit amet </p>
-					</div>
-					<div class="Noticia2desc">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor 							nisi a dui posuere, rutrum volutpat velit efficitur.</p>
-					</div>
-					<div class= "vermas notGenerica"><a href="dentro.html">Ver más</a></div>
-				</div>
-				<div class="Noticia3">
-					<div class="Noticia2Ima"><img src="../imagenes/prueba.PNG"></div>
-					<div class="Noticia2Titulo">
-						<p>Lorem ipsum dolor sit amet </p>
-					</div>
-					<div class="Noticia2desc">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor 							nisi a dui posuere, rutrum volutpat velit efficitur.</p>
-					</div>
-					<div class= "vermas notGenerica"><a href="dentro.html">Ver más</a></div>
-				</div>
-				<div class="Noticia4">
-					<div class="Noticia2Ima"><img src="../imagenes/prueba.PNG"></div>
-					<div class="Noticia2Titulo">
-						<p>Lorem ipsum dolor sit amet </p>
-					</div>
-					<div class="Noticia2desc">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor 							nisi a dui posuere, rutrum volutpat velit efficitur.</p>
-					</div>
-					<div class= "vermas notGenerica"><a href="dentro.html">Ver más</a></div>
-				</div>
-				<div class="Noticia5">
-					<div class="Noticia2Ima"><img src="../imagenes/prueba.PNG"></div>
-					<div class="Noticia2Titulo">
-						<p>Lorem ipsum dolor sit amet </p>
-					</div>
-					<div class="Noticia2desc">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor 							nisi a dui posuere, rutrum volutpat velit efficitur.</p>
-					</div>
-					<div class= "vermas notGenerica"><a href="dentro.html">Ver más</a></div>
-				</div>
-			</div>
-			<hr aling="center">
-			<div class="AbajoBlanco Centro">
-					<div class="SabiasQue">
-						<div class="ImagenSabiasQue"><img src="../imagenes/prueba.PNG"></div>
-						<div class="TituloSabiasQue"><h3>¿Sabías que contamos con el servicio de tamizaje neonatal?</h3></div>
-						<div class="DescSabiasQue">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur. Aliquam erat volutpat. Praesent blandit nulla luctus, scelerisque elit in, porttitor ipsum. Donec efficitur laoreet nibh, ac lacinia nibh accumsan non</p>
-						</div>
-						<div class= "vermas vmSabiasQue"><a href="dentro.html">Ver más</a></div>
-					</div>
-					<div class="AbajoSabiasQue">
-						<div class="MiniImagenesSabiasQue"><img src="../imagenes/prueba.PNG"></div>
-						<div class="MiniImagenesSabiasQue izq"><img src="../imagenes/prueba.PNG"></div>
-						<div class="MiniImagenesSabiasQue izq"><img src="../imagenes/prueba.PNG"></div>
-					</div>
-			</div>
-		</div>
+		
 		<div class="ColorGrisAb">
 			<div class="ServiciosQueOfrece">
 				<div id="ImagenServiciosQueOfrece">
-					<img src="../imagenes/pildora.png">
+					
 				</div>
 				<div id="TituloServiciosQueOfrece">
 					<h2>Servicios que se ofrecen</h2>
