--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -88,11 +88,46 @@
 				<img id="secondGrey_imgServiciosQueOfrece" src="../imagenes/pildora.png" alt="imagen pildora">
 				<label for="secondGrey_imgServiciosQueOfrece" class="Titulos">Servicios que se ofrecen</label>
 				<hr class="hrs hrsSecondGrey">
+				<p id="secondGrey_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet dui. Donec nec nulla eu magna euismod ornare condimentum non lorem. Vivamus quis eros lacus. Aliquam rhoncus odio non erat rhoncus, et posuere nibh gravida.</p>
+					<ul class="lista">
+						<li>Afiliación</li>
+						<li>Citas</li>
+						<li>Consulta Externa</li>
+						<li>Dermatología</li>
+					</ul>
+					<ul class="lista">
+						<li>Enfermería</li>
+						<li>Farmacía</li>
+						<li>Laboratorio</li>
+						<li>Nutrición</li>
+					</ul>
+					<ul class="lista">
+						<li>Odontología</li>
+						<li>Prestaciones</li>
+						<li>Psicología</li>
+						<li>Rayos X</li>
+					</ul>
+					<ul class="lista">
+						<li>Recepción</li>
+						<li>Trabajo Social</li>
+					</ul>
 			</div>
 			<div id="ContactosFrecuentes">
 				<img id="secondGrey_imgSContactosFrecuente" src="../imagenes/signos.png" alt="imagen signos">
 				<label for="secondGrey_imgSContactosFrecuente" class="Titulos">Contactos Frecuentes</label>
 				<hr class="hrs hrsSecondGrey">
+					<ul class="listaContactosFrecuentes">
+						<li>Citas</li>
+						<li>Afiliación</li>
+						<li>Laboratorio</li>
+						<li>Rayos X</li>
+					</ul>
+					<ul class="listaContactosFrecuentes izqListaFrecuente">
+						<li>Tel. 83 29 4000</li>
+						<li>Tel. 83 29 4000</li>
+						<li>Tel. 83 29 4000</li>
+						<li>Tel. 83 29 4000</li>
+					</ul>
 			</div>
 		</div>
 	</div>
@@ -111,36 +146,7 @@
 				<div class="DescrServiciosQueOfrece">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur. Aliquam erat volutpat.</p>
 				</div>
-				<div class="lista">
-					<ul>
-						<li>Afiliación</li>
-						<li>Citas</li>
-						<li>Consulta Externa</li>
-						<li>Dermatología</li>
-					</ul>
-				</div>
-				<div class="lista">
-					<ul>
-						<li>Enfermería</li>
-						<li>Farmacía</li>
-						<li>Laboratorio</li>
-						<li>Nutrición</li>
-					</ul>
-				</div>
-				<div class="lista">
-					<ul>
-						<li>Odontología</li>
-						<li>Prestaciones</li>
-						<li>Psicología</li>
-						<li>Rayos X</li>
-					</ul>
-				</div>
-				<div class="lista">
-					<ul>
-						<li>Recepción</li>
-						<li>Trabajo Social</li>
-					</ul>
-				</div>
+				
 			</div>
 			<div class="ContactosFrecuentes">
 				<div class="ImagenContactosFrecuentes">
@@ -148,22 +154,7 @@
 				</div>
 				<div class="TituloContactosFrecuentes"><h2>Contactos frecuentes</h2></div>
 				<hr>
-				<div class="listaContactosFrecuentes">
-					<ul>
-						<li>Citas</li>
-						<li>Afiliación</li>
-						<li>Laboratorio</li>
-						<li>Rayos X</li>
-					</ul>
-				</div>
-				<div class="listaContactosFrecuentes">
-					<ul>
-						<li><p>Tel. 83 29 4000</p></li>
-						<li><p>Tel. 83 29 4000</p></li>
-						<li><p>Tel. 83 29 4000</p></li>
-						<li><p>Tel. 83 29 4000</p></li>
-					</ul>
-				</div>
+				
 			</div>
 		</div>
 		<div class="ColorBlanAb">
