understanding resize window

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -90,26 +90,26 @@
 					<hr class="hrs hrsSecondGrey">
 					<p id="secondGrey_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet dui. Donec nec nulla eu magna euismod ornare condimentum non lorem. Vivamus quis eros lacus. Aliquam rhoncus odio non erat rhoncus, et posuere nibh gravida.</p>
 						<ul class="lista">
-							<li>Afiliación</li>
-							<li>Citas</li>
-							<li>Consulta Externa</li>
-							<li>Dermatología</li>
+							<li><p>Afiliación<p></li>
+							<li><p>Citas<p></li>
+							<li><p>Consulta Externa<p></li>
+							<li><p>Dermatología<p></li>
 						</ul>
 						<ul class="lista">
-							<li>Enfermería</li>
-							<li>Farmacía</li>
-							<li>Laboratorio</li>
-							<li>Nutrición</li>
+							<li><p>Enfermería</p></li>
+							<li><p>Farmacía</p></li>
+							<li><p>Laboratorio</p></li>
+							<li><p>Nutrición</p></li>
 						</ul>
 						<ul class="lista">
-							<li>Odontología</li>
-							<li>Prestaciones</li>
-							<li>Psicología</li>
-							<li>Rayos X</li>
+							<li><p>Odontología</p></li>
+							<li><p>Prestaciones</p></li>
+							<li><p>Psicología</p></li>
+							<li><p>Rayos X</p></li>
 						</ul>
 						<ul class="lista">
-							<li>Recepción</li>
-							<li>Trabajo Social</li>
+							<li><p>Recepción</p></li>
+							<li><p>Trabajo Social</p></li>
 						</ul>
 				</div>
 				<div id="ContactosFrecuentes">
