index it's done just left firefox font

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -8,14 +8,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 		<link rel="stylesheet" type="text/css" href="css/responsivo.css">
+		 <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
 	</head>
 	<body>
 		<header class="head">
 				<div class="conteiner">	
-					<a href="http://www.uanl.mx/"><img id="logoUni" src="../imagenes/LogoUni2.png" alt="Uanl Logo"></a>  
+					<a href="http://www.uanl.mx/"><img id="logoUni" src="../imagenes/LogoUni2.png" alt="Uanl Logo"></a> 
 					<input id ="Buscador" type="text">
 					<a><img src="../imagenes/BtnBuscar.png" alt=" Btn buscar" id="BtnBuscar"></a>
 					<a href="#home"><img src="../imagenes/BtnHome2.png" alt=" Imagen home" id="BtnHome"></a>
+					<input type="checkbox" id="menu-bar">
+                    <label class="icon-menu" for="menu-bar"></label>
+					  <nav class="munu-responsivo">
+                            <a href="dentro.html">Acerca de  DSM</a>
+                            <a href="dentro.html">Servicios</a>
+                            <a href="dentro.html">Programas</a>
+                            <a href="dentro.html">DerechoHabientes</a>
+                            <a href="dentro.html">Avisos</a>
+                            <a href="dentro.html">¿Sabías qué?</a>
+                            <a href="dentro.html">Promoción de la salud </a>
+                    </nav>
 					<menu type="toolbar" id="menu">
 						<ul>
 							<li><a href="dentro.html">Acerca de  DSM</a></li>
@@ -26,7 +38,8 @@
 							<li><a href="dentro.html">¿Sabías qué?</a></li>
 							<li><a href="dentro.html">Promoción de la salud</a></li>
 						</ul>
-					</menu>	 
+					</menu>
+						 
 	            </div>        
 		</header>			
 		<div id="firstYellow">
