--- a/Proyecto/dentro.html
+++ b/Proyecto/dentro.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 	<title>
 		Dirección de Servicios Médicos
@@ -6,38 +7,19 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/DentroEstilo.css">
-	   <link rel="stylesheet" type="text/css" href="css/responsivoDentro.css">
-        <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
-        <![if gte IE 7]> <link href="css/ieallversion.css" rel="stylesheet" type="text/css"> <![endif]–>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-       	<script type="text/javascript" src="js/validator.js"></script>
-  
+		<link rel="stylesheet" type="text/css" href="css/responsivo.css">
+		 <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
 	</head>
 	<body>
-        <div class="Top" style="z-index:100;  ">
-        	<div class=" Centro Banner" style="height:230px; margin-top:-25px; display:none;">Slider</div>
-			<div class="Centro CentroArriba" >
-				<div class="Logo"><a href="http://www.uanl.mx/"><img src="../imagenes/LogoUni2.png"></a> </div> 
-				<div class="Arriba">
-					<div class="Buscador" style="z-index:1; ">
-						<input type="text" >
-					</div>
-					<div class="BtnBuscar" ><img src="../imagenes/BtnBuscar.png"></div>
-					<div class="BtnHome"><a href="index.html"><img src="../imagenes/BtnHome2.png"></a></div>
-				</div>
-				<div class="Abajo">
-					<ul>
-							<li><a href="dentro.html">Acerca de  DSM</a></li>
-							<li><a href="dentro.html">Servicios</a></li>
-							<li><a href="dentro.html">Programas</a></li>
-							<li><a href="dentro.html">DerechoHabientes</a></li>
-							<li><a href="dentro.html">Avisos</a></li>
-							<li><a href="dentro.html">¿Sabías qué?</a></li>
-							<li><a href="dentro.html">Promoción de la salud</a></li>
-					</ul>
-                    <input type="checkbox" id="menu-bar">
+		<header class="head">
+				<div class="conteiner">	
+					<a href="http://www.uanl.mx/"><img id="logoUni" src="../imagenes/LogoUni2.png" alt="Uanl Logo"></a> 
+					<input id ="Buscador" type="text">
+					<a><img src="../imagenes/BtnBuscar.png" alt=" Btn buscar" id="BtnBuscar"></a>
+					<a href="#home"><img src="../imagenes/BtnHome2.png" alt=" Imagen home" id="BtnHome"></a>
+					<input type="checkbox" id="menu-bar">
                     <label class="icon-menu" for="menu-bar"></label>
-                    <nav class="munu-responsivo">
+					  <nav class="munu-responsivo">
                             <a href="dentro.html">Acerca de  DSM</a>
                             <a href="dentro.html">Servicios</a>
                             <a href="dentro.html">Programas</a>
@@ -46,17 +28,26 @@
                             <a href="dentro.html">¿Sabías qué?</a>
                             <a href="dentro.html">Promoción de la salud </a>
                     </nav>
-				</div>
-                    
-			</div>
-		</div>
-        <div id="home" style="display:hidden;"></div>
-		<div class="ColorAma" style="height:50px;">
-			
-		</div>
-		
-		<div class="ColorBlan" >
-			<div class="middel">
+					<menu type="toolbar" id="menu">
+						<ul>
+							<li><a href="dentro.html">Acerca de  DSM</a></li>
+							<li><a href="dentro.html">Servicios</a></li>
+							<li><a href="dentro.html">Programas</a></li>
+							<li><a href="dentro.html">DerechoHabientes</a></li>
+							<li><a href="dentro.html">Avisos</a></li>
+							<li><a href="dentro.html">¿Sabías qué?</a></li>
+							<li><a href="dentro.html">Promoción de la salud</a></li>
+						</ul>
+					</menu>
+						 
+	            </div>        
+		</header>			
+		<div id="firstYellow">
+				<!-- <div class="Banner conteiner ">Slider</div> -->
+		</div>	
+	
+		<div id="firstWhite">
+			<div class="conteiner">
 				<div class="info">
 					<h2>Servicios/Afiliación</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus congue odio metus, eget lobortis mauris fringilla faucibus. Vivamus in est ac tortor sodales placerat vel condimentum lorem. Curabitur aliquam mi felis, in maximus libero luctus eget. Quisque placerat bibendum pretium. Maecenas nisi nisi, volutpat id ante non, ornare suscipit risus. Aliquam ullamcorper ultricies tellus ac dignissim. </p>
@@ -102,10 +93,10 @@
 					<h3>
 						¿Sabías que contamos con el servicio de tamizaje neonatal?
 					</h3>
-					<div class= "vermas vm">
+					<div class= "vermas_info">
 						<a href="dentro.html">Ver más</a>
 					</div>
-					<hr style="margin-bottom:10px; width:100%; ">
+					<hr id="infoSabiasQue">
 					<div class="mnSQ">
 						<img src="../imagenes/prueba.PNG">
 					</div>
@@ -119,102 +110,110 @@
 
 				</div>
 				 <div style="clear: both"></div>
-			</div>	
-		</div>
-		<div class="ColorGrisAb">
-			<div class="ServiciosQueOfrece">
-				<div id="ImagenServiciosQueOfrece">
-					<img src="../imagenes/pildora.png">
-				</div>
-				<div id="TituloServiciosQueOfrece">
-					<h2>Servicios que se ofrecen</h2>
-				</div>
-				<hr>
-				<div class="DescrServiciosQueOfrece">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur. Aliquam erat volutpat.</p>
-				</div>
-				<div class="lista">
-					<ul>
-						<li>Afiliación</li>
-						<li>Citas</li>
-						<li>Consulta Externa</li>
-						<li>Dermatología</li>
-					</ul>
-				</div>
-				<div class="lista">
-					<ul>
-						<li>Enfermería</li>
-						<li>Farmacía</li>
-						<li>Laboratorio</li>
-						<li>Nutrición</li>
-					</ul>
-				</div>
-				<div class="lista">
-					<ul>
-						<li>Odontología</li>
-						<li>Prestaciones</li>
-						<li>Psicología</li>
-						<li>Rayos X</li>
-					</ul>
-				</div>
-				<div class="lista">
-					<ul>
-						<li>Recepción</li>
-						<li>Trabajo Social</li>
-					</ul>
-				</div>
 			</div>
-			<div class="ContactosFrecuentes">
-				<div class="ImagenContactosFrecuentes">
-					<img src="../imagenes/signos.png">
+		</div>
+		<div id="secondGrey">
+			<div class="conteiner">
+				<div id="ServiciosQueOfrece">
+					<img id="secondGrey_imgServiciosQueOfrece" src="../imagenes/pildora.png" alt="imagen pildora">
+					<label for="secondGrey_imgServiciosQueOfrece" class="Titulos">Servicios que se ofrecen</label>
+					<hr class="hrs hrsSecondGrey">
+					<p id="secondGrey_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet dui. Donec nec nulla eu magna euismod ornare condimentum non lorem. Vivamus quis eros lacus. Aliquam rhoncus odio non erat rhoncus, et posuere nibh gravida.</p>
+						<ul class="lista">
+							<li><p>Afiliación<p></li>
+							<li><p>Citas<p></li>
+							<li><p>Consulta Externa<p></li>
+							<li><p>Dermatología<p></li>
+						</ul>
+						<ul class="lista">
+							<li><p>Enfermería</p></li>
+							<li><p>Farmacía</p></li>
+							<li><p>Laboratorio</p></li>
+							<li><p>Nutrición</p></li>
+						</ul>
+						<ul class="lista">
+							<li><p>Odontología</p></li>
+							<li><p>Prestaciones</p></li>
+							<li><p>Psicología</p></li>
+							<li><p>Rayos X</p></li>
+						</ul>
+						<ul class="lista">
+							<li><p>Recepción</p></li>
+							<li><p>Trabajo Social</p></li>
+						</ul>
 				</div>
-				<div class="TituloContactosFrecuentes"><h2>Contactos frecuentes</h2></div>
-				<hr>
-				<div class="listaContactosFrecuentes">
-					<ul>
-						<li>Citas</li>
-						<li>Afiliación</li>
-						<li>Laboratorio</li>
-						<li>Rayos X</li>
-					</ul>
-				</div>
-				<div class="listaContactosFrecuentes">
-					<ul>
-						<li><p>Tel. 83 29 4000</p></li>
-						<li><p>Tel. 83 29 4000</p></li>
-						<li><p>Tel. 83 29 4000</p></li>
-						<li><p>Tel. 83 29 4000</p></li>
-					</ul>
+				<div id="ContactosFrecuentes">
+					<img id="secondGrey_imgSContactosFrecuente" src="../imagenes/signos.png" alt="imagen signos">
+					<label for="secondGrey_imgSContactosFrecuente" class="Titulos">Contactos Frecuentes</label>
+					<hr class="hrs hrsSecondGrey">
+						<ul class="listaContactosFrecuentes">
+							<li>Citas</li>
+							<li>Afiliación</li>
+							<li>Laboratorio</li>
+							<li>Rayos X</li>
+						</ul>
+						<ul class="listaContactosFrecuentes izqListaFrecuente">
+							<li>Tel. 83 29 4000</li>
+							<li>Tel. 83 29 4000</li>
+							<li>Tel. 83 29 4000</li>
+							<li>Tel. 83 29 4000</li>
+						</ul>
 				</div>
 			</div>
 		</div>
-		<div class="ColorAzul">
-			<div class="UnoAzulAbajo">
-				<p>UANL | DSM</p>
-				<p>Dirección de Servicios Médicos</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur.</p>
+		<div id="secondWhite">
+			<div class="conteiner">
+				<img id="secondWhite_img"src="../imagenes/corazon.png" alt="imagen del corazón">
+				<label for="secondWhite_img" class="Titulos">Programas de Prevención</label>
+				<hr class="hrs hrsSecondGrey">
+				<p id="secondWhite_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet dui. Donec nec nulla eu magna euismod ornare condimentum non lorem. Vivamus quis eros lacus. Aliquam rhoncus odio non erat rhoncus, et posuere nibh gravida.</p>
+				<ul class="ListProgramasPrevencion">
+					<li><p>Atención al climaterio</p></li>
+					<li><p>Atención podológica al paciente diabético</p></li>
+					<li><p>Campaña para dejar de fumar</p></li>
+					<li><p>Campaña permanente de aplicación de floururo</p></li>
+					<li><p>Capacitación a cuidadores de pacientes con enfermedad de Alzheimer</p></li>
+					<li><p>Clínica de diabetes</p></li>
+					<li><p>Clínica de hipertensión</p></li>
+					<li><p>Clínica de la mujer</p></li>
+					<li><p>Clínica de Nutrición(UNINutrie)</p></li>
+					<li><p>Control de embarazo</p></li>
+				</ul>
+				<ul class="ListProgramasPrevencion">
+					<li><p>Diagnóstico oportuno de cáncer de cérvix y mama</p></li>
+					<li><p>Envejecimiento exitoso</p></li>
+					<li><p>Fármaco-vigilancia</p></li>
+					<li><p>Planificación familiar</p></li>
+					<li><p>Programa contra el cáncer de próstata</p></li>
+					<li><p>Programa vacunación al niño, adolecente y adulto</p></li>
+					<li><p>Semana del adolecente</p></li>
+					<li><p>Tamizase neonatal</p></li>
+				</ul>	
 			</div>
-			<div class="DosAzulAbajo">
-				<p>Lorem ipsum</p>
-				<p>Atención médica y hospitalaria</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur.</p>
-			</div>
-			<div class="TresAzulAbajo">
-				<p>Contáctanos</p>
-				<p>serviciosmedicos@uanl.mx</p>
-				<p>Síguenos</p>
-				<div class="CuadrosContactanos">
-					<img src="../imagenes/face.png">
+		</div>
+		<div id="firstBlue">
+			<footer class="conteiner">
+				<div class="firstBlueconteiner">
+					<p><strong>UANL | DSM</strong></p>
+					<p>Dirección de Servicios Médicos</p><br>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur.</p>
 				</div>
-				<div class="CuadrosContactanos">
-					<img src="../imagenes/tw.png">
+				<div class="firstBlueconteiner izqFirstBlue">
+					<p><strong>Lorem ipsum</strong></p>
+					<p>Atención médica y hospitalaria</p><br>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie risus sed porttitor ornare. Praesent auctor nisi a dui posuere, rutrum volutpat velit efficitur.</p>
 				</div>
-				<div class="CuadrosContactanos">
-					<img src="../imagenes/msj.png">
+				<div class="firstBlueconteiner izqFirstBlue">
+					<p><strong>Contáctanos</strong></p>
+					<p>serviciosmedicos@uanl.mx</p><br>
+					<p><strong>Síguenos</strong></p><br>
+					<img src="../imagenes/face.png" alt="faceIcon">
+					<img src="../imagenes/tw.png" alt="twIcon" class="firstBlueconteiner_img">
+					<img src="../imagenes/msj.png" alt="msjIcon" class="firstBlueconteiner_img">
 				</div>
-			</div>
-			<hr>
-			<p class="Uanl">Universidad Autónoma de Nuevo León &reg; Pedro de alba S/n, San Nicolás de Los Garza, Nuevo León</p>
-		</div>     
+				<hr id="hrFooter">
+				<label for="hrFooter" id="uanl">Universidad Autónoma de Nuevo León &reg; Pedro de alba S/n, San Nicolás de Los Garza, Nuevo León</label>
+			</footer>
+		</div>
 	</body>
 </html>
