--- a/Proyecto/dentro.html
+++ b/Proyecto/dentro.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/DentroEstilo.css">
 		<link rel="stylesheet" type="text/css" href="css/responsivo.css">
 		 <link rel="stylesheet" type="text/css" href="css/fontello/menu.css">
+		 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
 	</head>
 	<body>
 		<header class="head">
@@ -16,7 +17,7 @@
 					<a href="http://www.uanl.mx/"><img id="logoUni" src="../imagenes/LogoUni2.png" alt="Uanl Logo"></a> 
 					<input id ="Buscador" type="text">
 					<a><img src="../imagenes/BtnBuscar.png" alt=" Btn buscar" id="BtnBuscar"></a>
-					<a href="#home"><img src="../imagenes/BtnHome2.png" alt=" Imagen home" id="BtnHome"></a>
+					<a href="index.html"><img src="../imagenes/BtnHome2.png" alt=" Imagen home" id="BtnHome"></a>
 					<input type="checkbox" id="menu-bar">
                     <label class="icon-menu" for="menu-bar"></label>
 					  <nav class="munu-responsivo">
